# assembly-engine

./: .gitignore  README.md  assembly-engine.spec  build_binary.sh  emoji_lib.py  final_game.py  game_lib.py  install.sh  requirements.txt  test_dummy.py
rust_compiler/: Cargo.toml
rust_compiler/src/: assembler.rs  indexer.rs  main.rs  retriever.rs
src/: assembler.py  assembler_bridge.py  indexer.py  main.py  retriever.py
