[package]
name = "rust_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error Handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File System
walkdir = "2.3"
sha2 = "0.10"
hex = "0.4"

# Parsing
tree-sitter = "0.20"
tree-sitter-python = "0.20"
regex = "1.10"

# TUI
ratatui = "0.27"
crossterm = "0.27"

# Async/Process
tokio = { version = "1", features = ["full"] }
